# parallel-programming

./: .clangd  .gitignore  README.md
lab-template/: report.md
lab0/: CMakeLists.txt  Makefile  README.md  gemm.cpp  gemm.h  gemm.py  naive.cpp  report.md  test
lab0/methods/: method0.cpp  method1.cpp  method2.cpp  method3.cpp  methods.h
lab1/: CMakeLists.txt  Makefile  main.cpp  main.h  report.md
lab1/lib/: gemm.cpp  input.cpp  lib.h  mkl_gemm.cpp  mpi_gemm.cpp
lab10/: draw.ipynb  report.md
lab10/common/: exception.h  helper_image.h
lab10/src/: main.cu  main.h
lab11/: CMakeLists.txt  Makefile  draw.ipynb  report.md
lab11/common/: helper_cuda.h  image.h
lab11/src/: conv_cudnn.cu  conv_cudnn.h  conv_im2col_gemm.cu  conv_im2col_gemm.h  conv_serial.cpp  conv_sliding_window.cu  conv_sliding_window.h  gemm.cu  main.cu  main.h
lab2/: CMakeLists.txt  Makefile  cannon.cpp  draw.ipynb  main.cpp  main.h  report.md
lab2/lib/: MartixParams.cpp  gemm.cpp  lib.h  mkl_gemm.cpp  verify.cpp
lab3/: CMakeLists.txt  Makefile  draw.ipynb  main1.cpp  report.md
lab3/lib/: gemm_thread.cpp  input.cpp  lib.h
lab3/test1/: gemm.cpp  main.cpp  main.h
lab3/test2/: main.cpp  main.h  sum.cpp
lab3/test3/: gemm.cpp  get_block_distribution.cpp  main.cpp  main.h
lab3/test4/: main.cpp  main.h  sum.cpp
lab4/: CMakeLists.txt  Makefile  draw.ipynb  report.md
lab4/test1/: main.cpp  main.h
lab4/test2/: main.cpp  main.h
lab4/util/: util.h
lab5/: CMakeLists.txt  Makefile  draw.ipynb  report.md
lab5/test1/: main.cpp  main.h
lab5/test2/: main.cpp  main.h  parallel_for.cpp  parallel_for.h
lab5/util/: bind_thread_to_cpu.cpp
lab6/: CMakeLists.txt  Makefile  draw.ipynb  report.md
lab6/lib/: bind_thread_to_cpu.cpp  parallel_for.cpp  parallel_for.h  timer.h
lab6/omp_ver/: heated_plate_openmp.cpp  heated_plate_openmp.h
lab6/src/: main.cpp  main.h
lab7/: CMakeLists.txt  Makefile  report.md
lab7/task1/: main.cpp
lab7/task1/fft/: ccopy.cpp  cfft2.cpp  cffti.cpp  fft.h  step.cpp
lab7/task1/time/: cpu_time.cpp  time.h  timestamp.cpp
lab7/task2/: main.h
lab7/task2/lib/: bind_thread_to_cpu.h
lab8/: CMakeLists.txt  Makefile  draw.ipynb  gen.py  report.md
lab8/task1/: main.cpp  timer.h
lab9/: CMakeLists.txt  Makefile  draw.ipynb  report.md
lab9/task1/: main.cu
lab9/task2/: main.cu
